  * Enable RFC 4361 DDNS support when using dhclient, as suggested by
    Nicolas Cuissard. Closes: #799257
  * Lock parent interface when configuration VLAN interfaces.
  * Apply fixes for issues found by AddressSanitizer and Clang Static
    Analyzer.
  * Drop the versioned dependency on initscripts. Closes: #804978
  * Check for errors when running mapping scripts. Closes: #246771

  [ Andrew Shadura ]
  * Implement interface inheritance using the "inherits" keyword.

  [ Jérémy Bobbio ]
  * Output methods in stable order when generating C code to make
    builds reproducible. Closes: #762388

  [ Javier Barroso ]
  * Fix detection of curlftpfs mounts. Closes: #792896

 -- Guus Sliepen <guus@debian.org>  Fri, 19 Jun 2015 21:09:27 +0200

ifupdown (0.7.54) unstable; urgency=medium

  [ Guus Sliepen ]
  * Adopting this package from Andrew Shadura. Closes: #786902
  * Converted the Mercurial repository to Git.
  * Clean up the source code (indentation, whitespace, remove some
    duplication, fix some warnings from cppcheck, clang, use C99, use const
    and static where possible, remove unused/obsolete files).
  * Prevent recursion using source and source-dir statements. Closes: #779786
  * Create /run/network if it doesn't exist. Closes: #681872
  * Bump Standards-Version.
  * Use [$arch-any] statements in debian/control for architecture-dependent
    Depends instead of conditionally calling dh_gencontrol from debian/rules.
  * Add -Wno-unused-parameters to CFLAGS in debian/rules.
  * Update debian/copyright and convert it to DEP-5 format.
  * Remove debian/README and debian/TODO, which are no longer relevant.
  * Update timestamp in manpages. Closes: #717266
  * Do not attempt to kill udhcpc if there is no pidfile. Closes: #744167
  * Add udev rule to allow rfkill for group netdev. Closes: #741454

  [ Yuriy Vostrikov ]
  * When using dhcpcd, pass the metric option. Closes: #784611

 -- Guus Sliepen <guus@debian.org>  Mon, 08 Jun 2015 23:39:41 +0200
