@@ -16,12 +16,16 @@ method auto
     privext int            -- Privacy extensions (RFC4941) (0=off, 1=assign, 2=prefer)
     accept_ra int          -- Accept router advertisements (0=off, 1=on, 2=on+forwarding) [2]
     dhcp int               -- Use stateless DHCPv6 (0=off, 1=on)
+    ll-attempts            -- Number of attempts to wait for a link-local address [60]
+    ll-interval            -- Link-local address polling interval in seconds [0.1]
+
   up
     modprobe -q net-pf-10 > /dev/null 2>&1 || true # ignore failure.
     -[[sysctl -q -e -w net.ipv6.conf.%iface/.//%.use_tempaddr=%privext%]]
     -sysctl -q -e -w net.ipv6.conf.%iface/.//%.accept_ra=%accept_ra%
     -sysctl -q -e -w net.ipv6.conf.%iface/.//%.autoconf=1
     ip link set dev %iface% up
+    /lib/ifupdown/wait-for-ll6.sh if (var_true("dhcp", ifd) && execable("/lib/ifupdown/wait-for-ll6.sh"))
     dhclient -6 -S -pf /run/dhclient6.%iface%.pid -lf /var/lib/dhcp/dhclient6.%iface%.leases -I -D LLT -df /var/lib/dhcp/dhclient.%iface%.leases %iface% \
         if (var_true("dhcp", ifd) && execable("/sbin/dhclient"))
   down
@@ -104,6 +108,8 @@ method dhcp
     hwaddress address      -- Hardware address
     accept_ra int          -- Accept router advertisements (0=off, 1=on, 2=on+forwarding) [1]
     autoconf int           -- Perform stateless autoconfiguration (0=off, 1=on)
+    ll-attempts            -- Number of attempts to wait for a link-local address [60]
+    ll-interval            -- Link-local address polling interval in seconds [0.1]
 
   conversion
     hwaddress cleanup_hwaddress
@@ -113,6 +119,7 @@ method dhcp
     -[[sysctl -q -e -w net.ipv6.conf.%iface/.//%.accept_ra=%accept_ra%]]
     -[[sysctl -q -e -w net.ipv6.conf.%iface/.//%.autoconf=%autoconf%]]
     ip link set dev %iface% [[address %hwaddress%]] up
+    /lib/ifupdown/wait-for-ll6.sh if (execable("/lib/ifupdown/wait-for-ll6.sh"))
     dhclient -6 -pf /run/dhclient6.%iface%.pid -lf /var/lib/dhcp/dhclient6.%iface%.leases -I -D LLT -df /var/lib/dhcp/dhclient.%iface%.leases %iface% \
         if (execable("/sbin/dhclient"))
 
